# frogware

./: .gitignore  Gui_Controller.py  Gui_Window.ui  MotorClassFromAptProtocolConnor.py  PlotAndTableFunctions.py  PlottingFunctions.py  QRC_file.qrc  QRC_file_rc.py  README.md  Readme.md  Scratch.ui  T0_um.txt  Window.py  emulators.py  environment.yml  first_program.py  package_list.txt  pyproject.toml  python_phase_retrieval.py  utilities.py
Apt_Protocol/: MotorClassFromAptProtocolConnor.py
Necessary_Drivers_Files/: notes.txt
Stellarnet_Python_Drivers/: mostly_complete_list_of_fcts.txt  stellarnet_demo.py  stellarnet_peter.py  test.py
hardware_comms/: APT.py  Motor.py  MotorClassFromAptProtocolConnor.py  OceanOpticsSpectrometer.py  Spectrometer.py  ThorlabsKinesisMotor.py  device_interfaces.py  stellarnet_peter.py  utilities.py
scratch_work/: DebugginNotes.txt  test.py
src/frogware_fcxqm/: Gui_Controller.py  PlotAndTableFunctions.py  T0_um.txt  Window.py  error.py  gui_controller.py  qrc.py  qrc.qrc  runnables.py  scripts.py  window.py
src/frogware_fcxqm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/frogware_fcxqm/hardware_comms/: Emulators.py  OceanOpticsSpectrometer.py  ThorlabsKinesisMotor.py  connect_devices.py  device_interfaces.py  kinesis.py  ocean.py  utilities.py
