[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "frogware_fcxqm"
version = "0.0.3"
authors = [
  { name="Mike Wahl", email="mike.wahl@colorado.edu" },
]
description = "GUI for interfacing with generic home-build FROG components"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Windows",
    "Private :: Do Not Upload"
]

dependencies = [
  "matplotlib",
  "numpy",
  "pyqt5",
  "pyqtgraph",
  "pyserial",
  "pyusb",
  "pyvisa",
  "scipy",
  "seabreeze",
  "pylablib",
  "platformdirs"
  ]
[project.scripts]
frogware = "frogware_fcxqm:scripts.frogware"
